UI Issues - Input email page:   - Wrong font   - Incorrect Icon Used   - Padding on Input Incorrect (tick is also incorrect)   - Incorrect Input box type used. Should be floating label: http://ionicframework.com/docs/components/#forms-floating-labels   - Button padding and font incorrect   - Skip font and size is incorrect. Also there is a line there that's not in my drawings.
- Social Media Login:
  - Incorrect Font

- Profile Page:
  - Incorrect Font
  - Incorrect Input box type used. Should be floating label: http://ionicframework.com/docs/components/#forms-floating-labels
  - Screen does weird jump between input selectors
  - Incorrect Letters in the Profile Icon (Who's DJ)

- App Home Page:
  - Update buttons

--- a/MTN/scss/ionic.app.scss
+++ b/MTN/scss/ionic.app.scss
@@ -16,20 +16,16 @@ $dark:                            #444 !default;
 */
 
 // The path for our ionicons font files, relative to the built CSS in www/css
-
 $ionicons-font-path: "../lib/ionic/fonts" !default;
-
-// Include all of Ionic
-@import "www/lib/ionic/scss/ionic";
-
-body, .ionic-body {
-  font-family: "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
-}
-
-
+$font-family-base: "Roboto", sans-serif !default;
 $bgcolor: #2C3A51;
 $yellowbg: #FFCC00;
 $trainingOrange: #FABA26;
+
+// Include all of Ionic
+@import "www/lib/ionic/scss/ionic";
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700,500,100');
+
 
 
 [nav-view-transition="ios"][nav-view-direction="back"] .bar .bar-header.barheader {
@@ -63,15 +59,6 @@ $trainingOrange: #FABA26;
   background-color: white;
   bottom: -260px;
 
-  .login-logo{
-    position: relative;
-    top: -100px;
-    max-width: 100px;
-  }
-  .login-message{
-    font-weight: bold;
-    margin-top:-65px;
-  }
   .profile-text{
     position: absolute;
     width: 100%;
@@ -99,10 +86,14 @@ $trainingOrange: #FABA26;
 
 .button.button-energized.button-clear{
   margin-top:-10px;
+  font-weight: 500;
+  font-size: 14px;
 }
 
 .button.button-energized.button-outline{
   margin-top:40px;
+  padding: 5px;
+  font-size: 14px;
 }
 
 ///// SIGN IN PAGE /////
@@ -122,10 +113,7 @@ $trainingOrange: #FABA26;
     top: -100px;
     max-width: 100px;
   }
-  .login-message{
-    font-weight: bold;
-    margin-top:-65px;
-  }
+
   .profile-text{
     position: absolute;
     width: 100%;
@@ -164,10 +152,45 @@ $trainingOrange: #FABA26;
   padding:0px !important;
 }
 
+.message-description{
+  font-weight: 500;
+  margin-top:-65px;
+  font-size: 16px;
+}
+
+.custom-label{
+  border-left: 0;
+  border-right: 0;
+  border-top: 0;
+  padding-left: 0;
+}
+
+.custom-segment {
+  > .button{
+    padding: 0;
+  }
+}
+
+.icon-circle{
+
+  border-radius: 50%;
+  background-color: $energized;
+  display: inline-block;
+  position: relative;
+  top: -100px;
+  width: 100px;
+  height: 100px;
+  line-height: 112px;
+  > img{
+    width: 25px;
+    height: 24px;
+  }
+}
+
 .valid{
   float: right;
   margin-top: -29px;
-  color: green;
+  color: lighten(green, 15%);
 }
 ////// PROFILE /////
 .test >label{
@@ -181,6 +204,7 @@ $trainingOrange: #FABA26;
 
 .bar-light .button.button-clear{
   color:white;
+  display: block;
 }
 
 .chat-scroll-content{
@@ -192,12 +216,6 @@ $trainingOrange: #FABA26;
   padding-top: 50px !important;
   background-color: white;
   bottom: -260px;
-
-  .login-logo{
-    position: relative;
-    top: -100px;
-    max-width: 100px;
-  }
   .login-message{
     font-weight: bold;
     margin-top:-65px;
@@ -298,11 +316,6 @@ $trainingOrange: #FABA26;
   margin-left: -27px;
   margin-top: -4px;
   font-weight: bold;
-}
-.button {
-    line-height: 28px !important;
-    height:28px !important;
-    min-height: 27px !important;
 }
 
 //// TRAINING /////
